Bastantes avances. Falta memory game y frases.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "monitateamo.github.io",
+  "name": "sanvalentin-monita",
   "private": true,
   "version": "0.0.0",
   "type": "module",
