--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "html2canvas": "^1.4.1",
+    "jspdf": "^4.1.0",
     "pinia": "^3.0.4",
     "tailwind-animations": "^1.0.1",
     "vue": "^3.5.24",
